--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <!-- partial:index.partial.html -->
 <div id="drag-container">
   <div id="spin-container">
-    <img src="pics\66.png"alt="">
-    <img src="pics\88.png" alt="">
-    <img src="pics\11.png" alt="">
-    <img src="pics\55.png" alt="">
-    <img src="pics\99.png" alt="">
-    <img src="pics\44.png" alt="">
+    <img src="66.png"alt="">
+    <img src="88.png" alt="">
+    <img src="11.png" alt="">
+    <img src="55.png" alt="">
+    <img src="99.png" alt="">
+    <img src="44.png" alt="">
     <!-- Example image with link -->
     <a target="_blank" href="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg">
       <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
